import { PlainMessage } from '@bufbuild/protobuf';
import { HandlerContext } from '@connectrpc/connect';
import { EnumStatusCode } from '@wundergraph/cosmo-connect/dist/common/common_pb';
import {
  DeleteIntegrationRequest,
  DeleteIntegrationResponse,
} from '@wundergraph/cosmo-connect/dist/platform/v1/platform_pb';
import { AuditLogRepository } from '../../repositories/AuditLogRepository.js';
import { OrganizationRepository } from '../../repositories/OrganizationRepository.js';
import type { RouterOptions } from '../../routes.js';
import { enrichLogger, getLogger, handleError } from '../../util.js';

export function deleteIntegration(
  opts: RouterOptions,
  req: DeleteIntegrationRequest,
  ctx: HandlerContext,
): Promise<PlainMessage<DeleteIntegrationResponse>> {
  let logger = getLogger(ctx, opts.logger);

  return handleError<PlainMessage<DeleteIntegrationResponse>>(ctx, logger, async () => {
    const authContext = await opts.authenticator.authenticate(ctx.requestHeader);
    logger = enrichLogger(ctx, logger, authContext);

    const orgRepo = new OrganizationRepository(logger, opts.db, opts.billingDefaultPlanId);
    const auditLogRepo = new AuditLogRepository(opts.db);

    if (!authContext.hasWriteAccess) {
      return {
        response: {
          code: EnumStatusCode.ERR,
          details: `The user doesnt have the permissions to perform this operation`,
        },
      };
    }

    const integration = await orgRepo.getIntegration(req.id, authContext.organizationId);
    if (!integration) {
      return {
        response: {
          code: EnumStatusCode.ERR_NOT_FOUND,
          details: `Integration with id ${req.id} not found`,
        },
      };
    }

    await orgRepo.deleteIntegration({
      organizationId: authContext.organizationId,
      id: req.id,
    });

    await auditLogRepo.addAuditLog({
      organizationId: authContext.organizationId,
      auditAction: 'integration.deleted',
      action: 'deleted',
      actorId: authContext.userId,
      auditableType: 'integration',
      auditableDisplayName: integration.name,
      actorDisplayName: authContext.userDisplayName,
      actorType: authContext.auth === 'api_key' ? 'api_key' : 'user',
    });

    return {
      response: {
        code: EnumStatusCode.OK,
      },
    };
  });
}
