import { PlainMessage } from '@bufbuild/protobuf';
import { HandlerContext } from '@connectrpc/connect';
import { EnumStatusCode } from '@wundergraph/cosmo-connect/dist/common/common_pb';
import {
  DeleteOrganizationWebhookConfigRequest,
  DeleteOrganizationWebhookConfigResponse,
} from '@wundergraph/cosmo-connect/dist/platform/v1/platform_pb';
import { AuditLogRepository } from '../../repositories/AuditLogRepository.js';
import { OrganizationRepository } from '../../repositories/OrganizationRepository.js';
import type { RouterOptions } from '../../routes.js';
import { enrichLogger, getLogger, handleError } from '../../util.js';

export function deleteOrganizationWebhookConfig(
  opts: RouterOptions,
  req: DeleteOrganizationWebhookConfigRequest,
  ctx: HandlerContext,
): Promise<PlainMessage<DeleteOrganizationWebhookConfigResponse>> {
  let logger = getLogger(ctx, opts.logger);

  return handleError<PlainMessage<DeleteOrganizationWebhookConfigResponse>>(ctx, logger, async () => {
    const authContext = await opts.authenticator.authenticate(ctx.requestHeader);
    logger = enrichLogger(ctx, logger, authContext);

    const orgRepo = new OrganizationRepository(logger, opts.db, opts.billingDefaultPlanId);
    const auditLogRepo = new AuditLogRepository(opts.db);

    if (!authContext.hasWriteAccess) {
      return {
        response: {
          code: EnumStatusCode.ERR,
          details: `The user doesnt have the permissions to perform this operation`,
        },
      };
    }

    if (!req.id) {
      return {
        response: {
          code: EnumStatusCode.ERR,
          details: `Webhook config id is required`,
        },
      };
    }

    const webhook = await orgRepo.getWebhookConfigById(req.id, authContext.organizationId);
    if (!webhook) {
      return {
        response: {
          code: EnumStatusCode.ERR_NOT_FOUND,
          details: `Webhook config not found`,
        },
      };
    }

    const config = await orgRepo.deleteWebhookConfig({
      organizationId: authContext.organizationId,
      id: req.id,
    });

    if (!config) {
      return {
        response: {
          code: EnumStatusCode.ERR,
          details: `Webhook config could not be deleted`,
        },
      };
    }

    await auditLogRepo.addAuditLog({
      organizationId: authContext.organizationId,
      auditAction: 'webhook_config.deleted',
      action: 'deleted',
      actorId: authContext.userId,
      auditableType: 'webhook_config',
      auditableDisplayName: config.endpoint || '',
      actorDisplayName: authContext.userDisplayName,
      actorType: authContext.auth === 'api_key' ? 'api_key' : 'user',
    });

    return {
      response: {
        code: EnumStatusCode.OK,
      },
    };
  });
}
